# huffman

./: .gitignore  CMakeLists.txt  README.md  encode.sh  encode.txt  smallrandom.in  verslagdingen.txt  windowtests.py
extra/: .gitignore  Makefile  besluit.tex  bibliografie.tex  bronnen.tex  conclusie.tex  impl-adaptive.tex  impl-blockwise.tex  impl-codes.tex  impl-io.tex  impl-sliding.tex  impl-standaard.tex  impl-twopass.tex  implementatiedetails.tex  inleiding.tex  preamble.tex  referenties.bib  titlepage.tex  vergelijkingen.tex  verslag.aux  verslag.bcf  verslag.blg  verslag.fdb_latexmk  verslag.fls  verslag.tex  verslag.toc
extra/testdata/: .~lock.sliding-windowsizes.ods#  blockwise-blocksizes.ods  sliding-windowsizes.ods  timing-random.txt  (+1 more)
scripts/: compile.sh  decode.sh  encode.sh  handin.sh  memleaks.sh
src/: CMakeLists.txt  main.c
testfiles/: bible100.in  bible1024.in  bible10240.in  bible102400.in  bible1048576.in
tests/: CMakeLists.txt  main.c  test_algorithm.c  test_algorithm.h  test_algorithm_standard.c  test_algorithm_standard.h  test_datastructure_bytequeue.c  test_datastructure_bytequeue.h  test_datastructure_huffmannode.c  test_datastructure_huffmannode.h  test_datastructure_huffmantree.c  test_datastructure_huffmantree.h  test_datastructure_minheap.c  test_datastructure_minheap.h  test_datastructure_queue.c  test_datastructure_queue.h  test_datatype_huffmancode.c  test_datatype_huffmancode.h  test_datatype_uint256t.c  test_datatype_uint256t.h  test_io_bitstream.c  test_io_bitstream.c.txt  test_io_bitstream.h.txt  test_io_input_bitinputstream.c  test_io_input_bitinputstream.h  test_io_input_byteinputstream.c  test_io_input_byteinputstream.h  test_io_input_inputstream.c  test_io_input_inputstream.h  test_io_input_intinputstream.c  test_io_input_intinputstream.h  test_io_output_bitoutputstream.c  test_io_output_bitoutputstream.h  test_io_output_byteoutputstream.c  test_io_output_byteoutputstream.h  test_io_output_intoutputstream.c  test_io_output_intoutputstream.h  test_io_output_outputstream.c  test_io_output_outputstream.h  test_unit.c  (+16 more)
(+91 files in other folders)
